examples/datalog/18_advanced_patterns/29_conditional_agg.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_cond_agg2
Knowledge graph 'test_cond_agg2' created.
Switched to knowledge graph: test_cond_agg2
> .kg use test_cond_agg2
Switched to knowledge graph: test_cond_agg2
> +sales[(1, "North", 100, "active"), (2, "South", 150, "active"), (3, "North", 200, "inactive"), (4, "South", 175, "active"), (5, "East", 50, "inactive")].
Inserted 5 fact(s) into 'sales'.
> +active_sum(Region, <SUM:Amt>) :- sales(_, Region, Amt, "active").
Script error: Parse error: Invalid term: '<SUM:Amt>'
