examples/datalog/18_advanced_patterns/29_conditional_agg.dl
% Test: Conditional aggregation pattern
% Expected: Aggregate based on conditions
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_cond_agg2
.kg use test_cond_agg2

+sales[(1, "North", 100, "active"),
       (2, "South", 150, "active"),
       (3, "North", 200, "inactive"),
       (4, "South", 175, "active"),
       (5, "East", 50, "inactive")].

% Sum active sales per region
+active_sum(Region, <SUM:Amt>) :- sales(_, Region, Amt, "active").

?- active_sum(Region, Sum).

% Count inactive per region
+inactive_count(Region, <COUNT:Id>) :- sales(Id, Region, _, "inactive").

?- inactive_count(Region, Count).

.kg use default
.kg drop test_cond_agg2
